--- a/04 - Array Cardio Day 1/index.html
+++ b/04 - Array Cardio Day 1/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Array Cardio 💪</title>
 </head>
+
 <body>
   <p><em>Psst: have a look at the JavaScript Console</em> 💁</p>
   <script>
@@ -31,7 +33,7 @@
 
     // Array.prototype.filter()
     // 1. Filter the list of inventors for those who were born in the 1500's
-    const filteredPpl = inventors.filter(inventor =>  1500 <=inventor.year < 1000);
+    const filteredPpl = inventors.filter(inventor => 1500 <= inventor.year < 1000);
 
     // console.log(filteredPpl)
 
@@ -43,23 +45,62 @@
 
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
+    const ordered = inventors.sort((a, b) => a.year > b.year ? 1 : -1);
+
+    console.log(ordered)
 
     // Array.prototype.reduce()
+    //Reduce allows you to build on to a variable  
     // 4. How many years did all the inventors live?
+    const totalYears = inventors.reduce((total, inventor) => {
+      return total + (inventor.past - inventor.year);
+    }, 0);
 
     // 5. Sort the inventors by years lived
 
+    const oldest = inventors.sort((a, b) => (a.past - a.year) > (b.past - b.year) ? 1 : -1);
+
+    console.table(oldest)
+
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
+
+    // const categoryLinks = Array.from(document.querySelectorAll('.mw-category a'));
+    // const de = categoryLinks
+    //   .map(link => link.innerText)
+    //   .filter(streetName => streetName.includes('de'));
+  
+    
+    // console.log(de)
 
 
     // 7. sort Exercise
     // Sort the people alphabetically by last name
 
+    const alpha = people.sort((lastOne, nextOne)=> {
+      const [aLast,aFirst] = lastOne.split(', ');
+      const [bLast,bFirst] = nextOne.split(', ');
+      return aLast > bLast ? 1 : -1;
+    });
+
+    console.log(alpha)
+
     // 8. Reduce Exercise
     // Sum up the instances of each of these
-    const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck' ];
+    const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck'];
+
+    const transportation = data.reduce(function(object,item){
+      if(!obj[item]){
+      obj[item] = 0;
+    }
+    obj[item]++;
+    return obj;
+  },{});
 
   </script>
 </body>
+
 </html>
+
+
+const de = categoryLinks.map(link => {if(link.innerText.includes('de')){return de}else{return false}});
